--- a/res/values-ru/errors.xml
+++ b/res/values-ru/errors.xml
@@ -1,49 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="Directory_does_not_exists">The directory does not exist</string>
+    <string name="Directory_does_not_exists">Директория не существует</string>
     
-    <string name="Unable_to_read_the_file">Unable to read the file</string>
-    <string name="Illegal_operation">Illegal operation</string>
-    
-    
-    <string name="Cannot_update_the_database">Cannot update the database</string>
-    <string name="Error">Error</string>
-    
-    <string name="Invalid_password_for_user_x">Invalid password for user \&quot;%\&quot;</string>
-    <string name="Invalid_master_password">Invalid master password</string>
-    <string name="Unable_to_execute_shell_command">Unable to execute the command</string>
-    <string name="No_root_access_available">No root access available</string>
-    <string name="Unable_to_read_root_directory">Unable to read root directory</string>
-    
-    <string name="Operation_has_failed">Operation failed</string>
-    <string name="Invalid_file_path">Invalid file path</string>
+    <string name="Unable_to_read_the_file">Невозможно прочитать файл</string>
+    <string name="Illegal_operation">Недопустимая операция</string>
     
     
-    <string name="Cannot_browse_to_x">Cannot browse to \&quot;%\&quot;. An unknown error occured.</string>
-    <string name="Cannot_write_to_the_system">Cannot write to the filesystem. Mount as read/write has failed.</string>
-    <string name="Requested_file_x_has_not_been_found">Requested file \&quot;%\&quot; was not found.</string>
-    <string name="Unknown_read_write_exception">Unknown read/write exception.</string>
-    <string name="Invalid_url_x">Invalid URL: %</string>
-    <string name="An_error_occured_while_accessing_master_password">An error occured while accessing the master password.</string>
-    <string name="Operation_not_allowed">Operation not allowed.</string>
-    <string name="Cannot_connect_to_host_x_on_port_y">Cannot connect to \&quot;%x\&quot; on port %y.</string>
-    <string name="Unable_to_resolve_host_x">Unable to resolve hostname \&quot;%x\&quot;.</string>
-    <string name="Server_returned_illegal_response">The server returned an illegal response</string>
-    <string name="An_error_occured_while_transferring_data_from_the_server">An error occured while transferring data from the server.</string>
-    <string name="Invalid_username_or_password">Invalid username or password.</string>
-    <string name="Internal_server_error">Internal server error.</string>
-    <string name="Server_response_x">Server response: %x</string>
-    <string name="Unable_to_open_the_file_for_reading">Unable to open the file for reading</string>
-    <string name="Unable_to_write_the_file_to_x">Unable to write the file to \&quot;%x\&quot;.</string>
-    <string name="Unable_to_connect_to_the_x">Unable to connect to the %x.</string>
-    <string name="Unknown_error">Unknown error</string>
-    <string name="Cannot_create_directory_X">Cannot create directory \&quot;%x\&quot;</string>
-    <string name="Unable_to_start_the_service_on_port_x">Unable to start the service on port %</string>
+    <string name="Cannot_update_the_database">Не удалось обновить базу данных</string>
+    <string name="Error">Ошибка</string>
     
-    <string name="Invalid_position">Invalid position</string>
-    <string name="Unable_to_delete_file_x">Unable to delete file %</string>
-    <string name="Unable_to_mount_the_system_as_read_write">Unable to mount the system as read/write</string>
-    <string name="Unable_to_mount_the_system_as_read_only">Unable to mount the system as read only</string>
-    <string name="Access_denied">Access denied</string>
+    <string name="Invalid_password_for_user_x">Неверный пароль пользователя \&quot;%\&quot;</string>
+    <string name="Invalid_master_password">Неверный мастер-пароль</string>
+    <string name="Unable_to_execute_shell_command">Невозможно выполнить команду оболочки</string>
+    <string name="No_root_access_available">Нет root-доступа</string>
+    <string name="Unable_to_read_root_directory">Нет доступа в корневую директорию</string>
+    
+    <string name="Operation_has_failed">Операция недоступна</string>
+    <string name="Invalid_file_path">Неверный путь к файлу</string>
+    
+    
+    <string name="Cannot_browse_to_x">Обзор невозможен \&quot;%\&quot;. Неизвестная ошибка.</string>
+    <string name="Cannot_write_to_the_system">Невозможно записать в файловой системе. Установка прав чтения/записи не удалась.</string>
+    <string name="Requested_file_x_has_not_been_found">Запрошенный файл \&quot;%\&quot; не найден.</string>
+    <string name="Unknown_read_write_exception">Неизвестное исключение чтения/записи.</string>
+    <string name="Invalid_url_x">Неверный URL: %</string>
+    <string name="An_error_occured_while_accessing_master_password">Ошибка при обращении к мастер-паролю.</string>
+    <string name="Operation_not_allowed">Операция недопустима</string>
+    <string name="Cannot_connect_to_host_x_on_port_y">Не удается подключиться к \&quot;%x\&quot; порту %y.</string>
+    <string name="Unable_to_resolve_host_x">Имя хоста не определено \&quot;%x\&quot;.</string>
+    <string name="Server_returned_illegal_response">Сервер вернул нелегальный ответ</string>
+    <string name="An_error_occured_while_transferring_data_from_the_server">Произошла ошибка при передаче данных с сервера</string>
+    <string name="Invalid_username_or_password">Неверное имя пользователя или пароль</string>
+    <string name="Internal_server_error">Внутренняя ошибка сервера.</string>
+    <string name="Server_response_x">Ответ сервера: %x</string>
+    <string name="Unable_to_open_the_file_for_reading">Невозможно открыть файл для чтения</string>
+    <string name="Unable_to_write_the_file_to_x">Невозможно записать файл в \&quot;%x\&quot;.</string>
+    <string name="Unable_to_connect_to_the_x">Не удается подключиться к %x.</string>
+    <string name="Unknown_error">Неизвестная ошибка</string>
+    <string name="Cannot_create_directory_X">Невозможно создать в дериктории \&quot;%x\&quot;</string>
+    <string name="Unable_to_start_the_service_on_port_x">Не удаётся запустить службу на порте %</string>
+    
+    <string name="Invalid_position">Неверная позиция</string>
+    <string name="Unable_to_delete_file_x">Невозможно удалить файл %</string>
+    <string name="Unable_to_mount_the_system_as_read_write">Невозможно установить систему в чтение/запись</string>
+    <string name="Unable_to_mount_the_system_as_read_only">Не удается установить систему только для чтения</string>
+    <string name="Access_denied">Отказано в доступе</string>
     
 </resources>
