--- a/res/values-ru/quickstart.xml
+++ b/res/values-ru/quickstart.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="page1_1">Solid Explorer имеет две независимые панели для просмотра файлов. Например, вы можете получить каталог SD-карты в одной панели и компьютера во второй. Теперь вы можете управлять файлами с легкостью.</string>
+    <string name="page1_1">Solid Explorer имеет две независимые панели для просмотра файлов. Например, вы можете получить каталог SD-карты в одной панели и компьютера, во второй. Теперь вы можете управлять файлами с легкостью.</string>
     <string name="page1_2">В портретном режиме видна сразу одна панель. Чтобы переключаться между ними, можно просто сдвигать пальцем влево или вправо. В ландшафтном режиме вы видите две панели одновременно.</string>
     <string name="page2_1">Вы можете перетаскивать несколько файлов, удерживая иконки и помещать их в противоположную панель. Просто перейдите на край экрана и появится вторая панель. Просто и интуитивно понятно.</string>
     <string name="page2_2">Вы можете бросать файлы в другую директорию. Просто держите их над вторым каталогом и папка будет открыта. Затем просто отпустите, на выбранном месте.</string>
