--- a/res/values-ru/quickstart.xml
+++ b/res/values-ru/quickstart.xml
@@ -6,11 +6,11 @@
     <string name="page2_2">Вы можете бросать файлы в другую директорию. Просто держите их над вторым каталогом и папка будет открыта. Затем просто отпустите, на выбранном месте.</string>
     <string name="page3_1">Чтобы выбрать файлы быстро, нажмите на значок папки. Всплывет окно выбора операции, над объектом, с некоторыми полезными функциями. Вы можете включить дополнительно \"копия\", \"вырезать\" и \"отправить\" кнопки в настройках.</string>
     <string name="page3_2">Единственное исключение, где эта функция не работает, это сетка. Вы должны включить режим выбора в меню "Действия".</string>
-    <string name="page4_1">Индексированный поиск обеспечивает быстрый доступ к файлам, расположенные на вашем устройстве. Поиск будет теперь быстрей! Если ваш файл будет не найден, повторите поиск в ручную выбрав \'Ручной поиск\' чтобы найти ваши файлы.</string>
+    <string name="page4_1">Индексированный поиск обеспечивает быстрый доступ к файлам, расположенные на вашем устройстве. Поиск будет теперь быстрей! Если ваш файл не будет найден, повторите поиск в ручную выбрав \'Ручной поиск\' чтобы найти ваши файлы.</string>
     <string name="page4_2">Вы так же можете найти своё устройство в поиске Google. Нужно зайти в Поиск-Google \ Меню настроек и разрешить доступ от Solid Explorer.</string>
-    <string name="page5_1">Solid Explorer поддерживает FTP, SFTP и SMB протоколы. Когда вы вошли куда то, оно автоматически сохраняется в виде закладки. Вы можете выбрать для шифрования пароль с мастер-паролем, который нужно установить.</string>
+    <string name="page5_1">Solid Explorer поддерживает FTP, SFTP и SMB протоколы. Когда вы вошли куда то, они автоматически сохраняются в виде закладок. Вы можете выбрать для шифрования пароль с мастер-паролем, который нужно установить.</string>
     <string name="page5_2">Если у вас есть облачный аккаунт, вы можете просматривать файлы в Dropbox и прочих, с легкостью, прямо из программы.</string>
-    <string name="page6_1">Вам необходимо отправить несколько файлов по электронной почте? Создайте ZIP, защищенным паролем. ZIP, TAR, GZIP и архивы BZIP, с компрессией.</string>
+    <string name="page6_1">Вам необходимо отправить несколько файлов по электронной почте? Создайте ZIP, защищенный паролем. Так же TAR, GZIP и архивы BZIP, с компрессией.</string>
     <string name="page6_2">Solid Explorer поддерживает ZIP, RAR и TAR архивы для просмотра и извлечения. Вы можете просмотреть архив, как из папки.</string>
     <string name="page7_1">Solid Explorer дает подробную информацию о файлах и дерикториях. Теперь вы можете изучить то, что занимает память или увидеть некоторую статистику.</string>
     <string name="page8_1">Каждые функции имеют свое место в окнах и под ними. Они были тщательно сгруппированы, для лучшего удобства.</string>
