--- a/res/values-ru/errors.xml
+++ b/res/values-ru/errors.xml
@@ -35,15 +35,15 @@
     <string name="Server_response_x">Ответ сервера: %x</string>
     <string name="Unable_to_open_the_file_for_reading">Невозможно открыть файл для чтения</string>
     <string name="Unable_to_write_the_file_to_x">Невозможно записать файл в \&quot;%x\&quot;.</string>
-    <string name="Unable_to_connect_to_the_x">Не удается подключиться к %x.</string>
+    <string name="Unable_to_connect_to_the_x">Не удаётся подключиться к %x.</string>
     <string name="Unknown_error">Неизвестная ошибка</string>
-    <string name="Cannot_create_directory_X">Невозможно создать в дериктории \&quot;%x\&quot;</string>
+    <string name="Cannot_create_directory_X">Невозможно создать в директории \&quot;%x\&quot;</string>
     <string name="Unable_to_start_the_service_on_port_x">Не удаётся запустить службу на порте %</string>
     
     <string name="Invalid_position">Неверная позиция</string>
     <string name="Unable_to_delete_file_x">Невозможно удалить файл %</string>
     <string name="Unable_to_mount_the_system_as_read_write">Невозможно установить систему в чтение/запись</string>
-    <string name="Unable_to_mount_the_system_as_read_only">Не удается установить систему только для чтения</string>
+    <string name="Unable_to_mount_the_system_as_read_only">Не удаётся установить систему только для чтения</string>
     <string name="Access_denied">Отказано в доступе</string>
     
 </resources>
