--- a/res/values-ru/quickstart.xml
+++ b/res/values-ru/quickstart.xml
@@ -6,7 +6,7 @@
     <string name="page2_2">Так же вы можете переместить файл в папку на той же панели. Немного подержите файл на папке и она раскроется, затем просто отпустите его.</string>
     <string name="page3_1">Для быстрого выделения файлов, коснитесь их иконок. Появится панель с некоторыми полезными функциями. Вы можете включить дополнительные кнопки \"копировать\", \"вырезать\" и \"отправить\" в настройках.</string>
     <string name="page3_2">Эта функция не работает при отображении файлов сеткой. Вы можете включить режим выбора в меню "Действия".</string>
-    <string name="page4_1">Индексированный поиск обеспечивает быстрый доступ к файлам, находящимся на вашем устройстве. Поиск занимает менее секунды! Если ваш файл не будет найден, выберите \'Ручной поиск\' для поиска по всем файлам.</string>
+    <string name="page4_1">Индексированный поиск обеспечивает быстрый доступ к файлам, находящихся на вашем устройстве. Поиск занимает менее секунды! Если ваш файл не будет найден, выберите \'Ручной поиск\' для поиска по всем файлам.</string>
     <string name="page4_2">Вы также можете искать файлы в поиске Google. Зайдите в настройки поиска Google и активируйте Solid Explorer.</string>
     <string name="page5_1">Solid Explorer поддерживает протоколы FTP, SFTP и SMB. Настройки соединений автоматически сохраняются после входа в виде закладок. Вы можете зашифровать пароль с помощью мастер-пароля, который нужно установить.</string>
     <string name="page5_2">Если у вас есть аккаунт облачного хранилища, вы можете просматривать файлы в Dropbox и прочих так же, как и файлы на устройстве.</string>
